2007-07-21  Raffaele Sandrini  <raffaele@sandrini.ch>

	* vala/scanner.l: allow '\0' escape sequences

2007-07-21  Raffaele Sandrini  <raffaele@sandrini.ch>

	* vala/valasourcefile.vala: do not add includes to oneself

2007-07-17  Jürg Billeter  <j@bitron.ch>

	* vala/valaarray.vala, vala/valadatatype.vala, vala/valapointer.vala:
	  correct return type of get_cheader_filenames

2007-07-17  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraylengthfield.vala, vala/valaarrayresizemethod.vala,
	  vala/valacodecontext.vala, vala/valasemanticanalyzer.vala,
	  vala/valasymbolbuilder.vala, vala/valasymbolresolver.vala,
	  gobject/valacodegenerator.vala: convert the CodeContext.get_root
	  method to a property

2007-07-17  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valaattributeprocessor.vala,
	  vala/valacodecontext.vala, vala/valadatatype.vala,
	  vala/valainterfacewriter.vala, vala/valamemorymanager.vala,
	  vala/valanamespace.vala, vala/valasemanticanalyzer.vala,
	  vala/valasourcefile.vala, vala/valasymbolbuilder.vala,
	  vala/valasymbolresolver.vala, gobject/valacodegenerator.vala,
	  gobject/valacodegeneratorsourcefile.vala, vapigen/valagidlparser.vala,
	  vapigen/valavapigen.vala: move namespaces from SourceFile to
	  CodeContext

2007-07-17  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: generate more ellipsis parameters
	* vapi/gstreamer-0.10.vala, vapi/gtk+-2.0.vala, vapi/pango.vala:
	  regenerated to add ellipsis parameters where appropriate

2007-07-17  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala, vapi/glib-2.0.vala,
	  vapi/gstreamer-0.10.vala, vapi/packages/gstreamer-0.10/: add GStreamer
	  bindings

2007-07-13  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2007-07-13  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.1.1 release

2007-07-13  Jürg Billeter  <j@bitron.ch>

	* vala/valacatchclause.vala, vala/valacodevisitor.vala,
	  vala/valamemorymanager.vala, vala/valasemanticanalyzer.vala,