@@ -1,5 +1,15 @@
 2007-07-21  Raffaele Sandrini  <raffaele@sandrini.ch>
 
+	* vapi/zlib.vala: add basic zlib support
+	* vapi/glib-2.0.vala: add some string members, add some process
+	  exit status and signal handling functions/macros, enhance FileStream
+	  create GLib.DirUtils to be the same for dirs as GLib.FileUtils is for
+	  files, enhance GLib.HashTable binding, add g_list_free function to
+	  the collection of HashTable freeing functions
+	* vapi/Makefile.am: update
+
+2007-07-21  Raffaele Sandrini  <raffaele@sandrini.ch>
+
 	* vala/scanner.l: allow '\0' escape sequences
 
 2007-07-21  Raffaele Sandrini  <raffaele@sandrini.ch>
